# ssh-web-ca

./: .gitignore  Cargo.toml  config.yml
migrations/: 20240913030046_create_user_table.sql  20240913031943_create_cert_table.down.sql  20240913031943_create_cert_table.up.sql
src/: auth.rs  controller.rs  main.rs  model.rs  service_provider.rs  signatory.rs  ssh_ca.rs
src/model/: controller.rs  mod.rs
src/routes/: api.rs  auth.rs  mod.rs
